--- a/apps/next/project.json
+++ b/apps/next/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "nx-react-next-nest-prisma",
+  "name": "next",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "apps/nx-react-next-nest-prisma",
+  "sourceRoot": "apps/next",
   "projectType": "application",
   "targets": {
     "build": {
@@ -9,11 +9,11 @@
       "outputs": ["{options.outputPath}"],
       "defaultConfiguration": "production",
       "options": {
-        "outputPath": "dist/apps/nx-react-next-nest-prisma"
+        "outputPath": "dist/apps/next"
       },
       "configurations": {
         "development": {
-          "outputPath": "apps/nx-react-next-nest-prisma"
+          "outputPath": "apps/next"
         },
         "production": {}
       }
@@ -22,16 +22,17 @@
       "executor": "@nx/next:server",
       "defaultConfiguration": "development",
       "options": {
-        "buildTarget": "nx-react-next-nest-prisma:build",
-        "dev": true
+        "buildTarget": "next:build",
+        "dev": true,
+        "proxyConfig": "apps/next/proxy.conf.json"
       },
       "configurations": {
         "development": {
-          "buildTarget": "nx-react-next-nest-prisma:build:development",
+          "buildTarget": "next:build:development",
           "dev": true
         },
         "production": {
-          "buildTarget": "nx-react-next-nest-prisma:build:production",
+          "buildTarget": "next:build:production",
           "dev": false
         }
       }
@@ -39,14 +40,14 @@
     "export": {
       "executor": "@nx/next:export",
       "options": {
-        "buildTarget": "nx-react-next-nest-prisma:build:production"
+        "buildTarget": "next:build:production"
       }
     },
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "apps/nx-react-next-nest-prisma/jest.config.ts",
+        "jestConfig": "apps/next/jest.config.ts",
         "passWithNoTests": true
       },
       "configurations": {
@@ -60,9 +61,7 @@
       "executor": "@nx/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": [
-          "apps/nx-react-next-nest-prisma/**/*.{ts,tsx,js,jsx}"
-        ]
+        "lintFilePatterns": ["apps/next/**/*.{ts,tsx,js,jsx}"]
       }
     }
   },
