--- a/package.json
+++ b/package.json
@@ -5,19 +5,35 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^3.0.0",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/mapped-types": "*",
+    "@nestjs/platform-express": "^10.0.2",
     "@nx/next": "16.7.1",
+    "@prisma/client": "^5.1.1",
+    "axios": "^1.0.0",
+    "joi": "^17.9.2",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
+    "@nx-tools/nx-prisma": "^5.0.3",
     "@nx/cypress": "16.7.1",
     "@nx/eslint-plugin": "16.7.1",
     "@nx/jest": "16.7.1",
     "@nx/js": "16.7.1",
     "@nx/linter": "16.7.1",
+    "@nx/nest": "^16.7.1",
+    "@nx/node": "16.7.1",
     "@nx/react": "16.7.1",
+    "@nx/webpack": "16.7.1",
     "@nx/workspace": "16.7.1",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
@@ -38,9 +54,11 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "nx": "16.7.1",
     "nx-cloud": "latest",
     "prettier": "^2.6.2",
+    "prisma": "^5.1.1",
     "sass": "1.62.1",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
